게시글 추가

--- a/index.html
+++ b/index.html
@@ -98,10 +98,75 @@
             <div class="price">640,000원</div>
           </div>
         </div>
+        <div class="content">
+          <img
+            class="image"
+            src="https://th.bing.com/th/id/OIP.1C2yBxOj1ElDBSkTWTyP4gHaHa?w=172&h=180&c=7&r=0&o=5&pid=1.7"
+            alt="샘플 이미지"
+          />
+          <div class="text-group">
+            <div class="title">스타벅스에서 공짜로 얻은 텀블러 싸게 팔아요</div>
+            <div class="meta">
+              <span class="location">울산 워싱턴</span>
+              <span> · </span>
+              <span class="time">7분전</span>
+            </div>
+            <div class="price">50,000원</div>
+          </div>
+        </div>
+        <div class="content">
+          <img
+            class="image"
+            src="https://th.bing.com/th/id/OIP.YJThNmpTMqCx7HjmAFeYLgHaEr?w=256&h=180&c=7&r=0&o=5&pid=1.7"
+            alt="샘플 이미지"
+          />
+          <div class="text-group">
+            <div class="title">이제 안 타는 자동차 팔아요. 차종 모름</div>
+            <div class="meta">
+              <span class="location">내가 사는 곳</span>
+              <span> · </span>
+              <span class="time">5분전</span>
+            </div>
+            <div class="price">50,000,000원</div>
+          </div>
+        </div>
+        <div class="content">
+          <img
+            class="image"
+            src="https://th.bing.com/th/id/OIP.iWdQF30Ld10vrKI6ifJKKwAAAA?w=204&h=204&c=7&r=0&o=5&pid=1.7"
+            alt="샘플 이미지"
+          />
+          <div class="text-group">
+            <div class="title">우리 아들이 작년까지 가지고 놀던 장난감, 이제 대학 가서 팔아요</div>
+            <div class="meta">
+              <span class="location">광주 광장</span>
+              <span> · </span>
+              <span class="time">2분전</span>
+            </div>
+            <div class="price">30,000원</div>
+          </div>
+        </div>
+        <div class="content">
+          <img
+            class="image"
+            src="https://th.bing.com/th/id/OIP.CzvQ0GMPJWVSC-q31l5WzgHaEU?w=273&h=180&c=7&r=0&o=5&pid=1.7"
+            alt="샘플 이미지"
+          />
+          <div class="text-group">
+            <div class="title">아이폰 팔아요. 터치조차 안 함. 완전 새삥</div>
+            <div class="meta">
+              <span class="location">서울 광화문광장</span>
+              <span> · </span>
+              <span class="time">2분전</span>
+            </div>
+            <div class="price">3,000,000원</div>
+          </div>
+        </div>
       </div>
+    </div>
     </main>
     <!-- 사이드 글쓰기 버튼 -->
-    <button id="btn-write">+글쓰기</button>
+    <button id="btn-write">+ 글쓰기</button>
     <!-- 푸터 바 -->
     <footer>
       <nav class="menu-bar">
