폼 데이터 서버로 보내기 구현

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -166,7 +166,7 @@
     </div>
     </main>
     <!-- 사이드 글쓰기 버튼 -->
-    <button id="btn-write">+ 글쓰기</button>
+    <a id="btn-write" href="./write.html">+ 글쓰기</a>
     <!-- 푸터 바 -->
     <footer>
       <nav class="menu-bar">
